@@ -179,6 +179,11 @@ METHODS
       message is ready, this will return undef. This will also return undef
       when the pipe is closed (EOF).
 
+    $count = $self->parts_needed($data)
+
+      Get the number of parts the data will be split into for it to be
+      written in atomic chunks.
+
     $p->blocking($bool)
 
     $bool = $p->blocking
@@ -193,6 +198,29 @@ METHODS
 
       Close this end of the pipe (or both ends if this is not yet split
       into reader/writer pairs).
+
+    $undef_or_bytes = $p->fits_in_burst($data)
+
+      This will return undef if the data DES NOT fit in a burst. This will
+      return the size of the data in bytes if it will fit in a burst.
+
+    $undef_or_bytes = $p->write_burst($data)
+
+      Attempt to write $data in a single atomic burst. If the data is too
+      big to write atomically this method will not write any data and will
+      return undef. If the data does fit in an atomic write then the data
+      will be written and the total number of bytes written will be
+      returned.
+
+      Note: YOU MUST NOT USE read_message() when writing bursts. This
+      method sends the data as-is with no data-header or modification. This
+      method should be used when the other side is reading the pipe
+      directly without an Atomic::Pipe on the receiving end.
+
+      The primary use case of this is if you have multiple writers sending
+      short plain-text messages that will not exceed the atomic pipe buffer
+      limit (minimum of 512 bytes on systems that support atomic pipes
+      accoring to POSIX).
 
   RESIZING THE PIPE BUFFER
 
